Moving icon alignment fixes to topNav.scss. Fix hover color for governance help button.

--- a/ui/governance/src/app/governanceAppShell.scss
+++ b/ui/governance/src/app/governanceAppShell.scss
@@ -41,19 +41,14 @@ $topnav-hover-background-color: #40caf8;
                 }
             }
 
-            a.dropdownToggle:hover {
+            a:hover {
                 color: $topnav-hover-background-color;
-            }
-        }
 
-        .globalActionsList {
-            .globalAction {
-                height: 40px;
-
-                .globalActionLink {
-                    vertical-align: top;
+                span.reHelpButtonHover.qbIcon {
+                    color: inherit;
                 }
             }
+
         }
     }
 }
